--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,22 @@
     "src": "Map.png",
       "sizes": "128x128",
       "type": "image/png"
+    }, {
+      "src": "Map.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    }, {
+      "src": "Map.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    }, {
+      "src": "Map.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }, {
+      "src": "Map.png",
+      "sizes": "256x256",
+      "type": "image/png"
     }
     ],
   "start_url": "/index.html",
