--- a/manifest.json
+++ b/manifest.json
@@ -36,10 +36,15 @@
         "sizes": "192x192",
         "type": "image/png",
         "density": "4.0"
+      },
+      {
+        "src": "map512.png",
+        "sizes": "512x512",
+        "type": "image/png"
       }
     ],
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#3E4EB8",
+  "background_color": "#ffffff",
   "theme_color": "#2F3BA2"
 }
